Maßeinheiten und Schriftgröße.

--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -299,17 +299,48 @@ bis zur H-Linie.
   \caption{Schriftlinien\protect\footnotemark}
   \label{fig:Liniensystem}
 \end{figure}
-\footnotetext{Autor:
+\footnotetext{Modifiziert nach
   \href{https://de.wikipedia.org/wiki/Datei:Typografisches_Liniensystem.svg}
   {Crissov auf Wikipedia},
   Lizenz: \href{https://creativecommons.org/licenses/by-sa/4.0/}
   {\acr{CC BY-SA}\,4.0}}
 
-%% Inkl. Maßeinheiten und so, und Zeilenabstand
+Die grundlegende Maßeinheit für Längen in der Typographie ist der
+\emph{typographische Punkt}, von dem es historisch verschiedene
+Versionen gab und gibt.  Heutzutage üblich ist der
+\emph{Desktop-Publishing-Punkt} \emph{(\acr{DTP}-Punkt)}: er ist
+definiert als 1\,pt = \smallfrac{1}{72}\,in =
+0,352$\overline{\text{7}}$\,mm.  In Punkt wird die \emph{Schriftgröße}
+(bzw. der \emph{Schriftgrad}) angegeben.  Zur Zeit des Bleisatzes war
+das die \emph{Kegelstärke} (bzw. \emph{Kegelhöhe}) der Lettern (siehe
+\cref{fig:Bleiletter}).  Im Foto- und besonders im Digitalsatz ist die
+Angabe von Schriftgrößen zwar weiter grob am historischen Vorbild
+orientiert, aber verschiedene Schriften desselben Schriftgrades können
+optisch deutlich verschieden groß wirken.  Als (sehr) grobe Faustregel
+kann man sich merken, dass die Versalhöhe einer Schrift ca. 70--75\,\%
+eines Gevierts und die x-Höhe ca. 45--50\,\% eines Gevierts beträgt.
 
-%% Zu Schriftgröße: 1em = Schriftgröße.  Was das mit der tatsächlichen
-%% Glyphengröße zu tun hat: heutzutage sehr willkürlich; oft so was
-%% wie Versalhöhe ≈ .7em (oder so?!).
+\begin{figure}
+  \centering
+  \includegraphics[width=.5\textwidth]{Bleiletter}
+  \caption{Bleiletter}
+  \label{fig:Bleiletter}
+\end{figure}
+
+Ist eine Schriftgröße festgelegt, so nennt man die entsprechende Länge
+ein \emph{Geviert}.  Historisch kommt dieser Name von quadratischen
+nicht druckenden Lettern (»Geviert« ist ein veraltetes Wort für
+»Quadrat«): ein Geviert war ein Letter, der so breit war wie die
+Kegelstärke.  Entsprechend benennt man Anteile dieser Länge bspw. als
+\emph{Halb-} oder \emph{Viertelgeviert}~-- daher auch die
+typographischen Namen der verschiedenen Striche
+(vgl. \cref{sec:Striche}).  Auf Englisch heißt das Geviert
+\emph{\foreignlanguage{british}{quad}} oder
+\emph{\foreignlanguage{british}{em}}, das Halbgeviert
+\emph{\foreignlanguage{british}{en}}.\footnote{Manchmal wird
+  behauptet, das komme daher, dass die Großbuchstaben \Char{M}
+  bzw. \Char{N} die entsprechende Breite haben.  Das ist aber falsch:
+  Üblicherweise ist ein \Char{M} ein wenig schmaler als ein Geviert.}
 
 %% Zeilenabstand: eigentlich sollte™ man einfach den Abstand zwischen
 %% den Grundlinien messen.  Es gibt sinnvolle Standardeinstellungen,
