--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -91,6 +91,7 @@ Akzentzeichen \Char{\textasciigrave} und \Char{´} sind, genau wie das
 Ersatzzeichen \Char{\textquotesingle}, \emph{keine} Apostrophe!\looseness-1
 
 \section{Striche}
+\label{sec:Striche}
 
 Es gibt verschiedene Arten von (horizontalen) \emph{Strichen}, die in Texten
 aller Art auftauchen.  Hier eine kleine Auswahl:
