--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -291,7 +291,7 @@ ragen sie oft ein bisschen über, sodass sie \emph{optisch} »an der
 Linie« enden.  Zu beachten ist noch, dass es eine eigene k-Linie
 \emph{nur bei Renaissance-Antiquas} gibt; bei allen anderen
 Antiqua-Schriften reichen Oberlängen von Minuskeln wie die Majuskeln
-bis zur H-Linie.
+bis zur \mbox{H-Linie}.
 
 \begin{figure}
   \centering
