--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -318,7 +318,7 @@ Angabe von Schriftgrößen zwar weiter grob am historischen Vorbild
 orientiert, aber verschiedene Schriften desselben Schriftgrades können
 optisch deutlich verschieden groß wirken.  Als (sehr) grobe Faustregel
 kann man sich merken, dass die Versalhöhe einer Schrift ca. 70--75\,\%
-eines Gevierts und die x-Höhe ca. 45--50\,\% eines Gevierts beträgt.
+und die x-Höhe ca. 45--50\,\% des Schriftgrades beträgt.
 
 \begin{figure}
   \centering
