--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -284,14 +284,15 @@ Stockwerk«) der Buchstaben reicht, die \emph{p-Linie}, zu der
 Buchstaben mit \emph{Unterlänge} (einem »unteren Stockwerk«)
 herabreichen, und die \emph{k-Linie}, zu der Buchstaben mit
 \emph{Oberlänge} (einem »oberen Stockwerk«) hinaufreichen.  Der
-Abstand von Grundlinie zu x-Linie heißt \emph{x-Höhe}.  Die
-entsprechenden Teile der Glyphen hören oft nicht strikt an den
-entsprechenden Linien auf, insbesondere bei Rundungen; stattdessen
-ragen sie oft ein bisschen über, sodass sie \emph{optisch} »an der
-Linie« enden.  Zu beachten ist noch, dass es eine eigene k-Linie
-\emph{nur bei Renaissance-Antiquas} gibt; bei allen anderen
-Antiqua-Schriften reichen Oberlängen von Minuskeln wie die Majuskeln
-bis zur \mbox{H-Linie}.
+Abstand von Grundlinie zu x-Linie heißt \emph{x-Höhe}.  (Relevant für
+die Schriftgestaltung ist außerdem noch die \emph{Á-Linie}, bis zu der
+Akzente auf Majuskeln reichen.)  Die entsprechenden Teile der Glyphen
+hören oft nicht strikt an den entsprechenden Linien auf, insbesondere
+bei Rundungen; stattdessen ragen sie oft ein bisschen über, sodass sie
+\emph{optisch} »an der Linie« enden.  Zu beachten ist noch, dass es
+eine eigene k-Linie \emph{nur bei Renaissance-Antiquas} gibt; bei
+allen anderen Antiqua-Schriften reichen Oberlängen von Minuskeln wie
+die Majuskeln bis zur \mbox{H-Linie}.
 
 \begin{figure}
   \centering
