--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -210,7 +210,7 @@ geneigt, ohne die Form der Glyphen zu verändern.\footnote{Manche
   \centering
 
   \subfloat[\emph{Minion}]
-  {\begin{minipage}{.35\textwidth}
+  {\begin{minipage}[b]{.35\textwidth}
       \large Minion normal afg
 
       \textit{Minion kursiv afg}
@@ -219,7 +219,7 @@ geneigt, ohne die Form der Glyphen zu verändern.\footnote{Manche
     \end{minipage}}
   \hspace{.1\textwidth}
   \subfloat[\emph{Classico}]
-  {\begin{minipage}{.35\textwidth}
+  {\begin{minipage}[b]{.35\textwidth}
       \large\sffamily Classico normal afg
 
       \textit{Classico kursiv afg}
@@ -254,7 +254,7 @@ Abgesehen von den oben erwähnten üblichen Auszeichnungsmerkmalen haben
 gute Schriften meist noch Schriftschnitte für \emph{Kapitälchen}
 (siehe \cref{sec:Kapitälchen}).  Außerdem gibt es bei professionellen
 Schriften oft verschiedene \emph{optische Größen}, d.\,h. Schnitte,
-die an verschiedene Schriftgrößen angepasst sind (siehe
+die an verschiedene Schriftgrade angepasst sind (siehe
 \cref{fig:optische_Größen}).
 
 \begin{figure}
@@ -311,11 +311,11 @@ Die grundlegende Maßeinheit für Längen in der Typographie ist der
 Versionen gab und gibt.  Heutzutage üblich ist der
 \emph{Desktop-Publishing-Punkt} \emph{(\acr{DTP}-Punkt)}: er ist
 definiert als 1\,pt = \smallfrac{1}{72}\,in =
-0,352$\overline{\text{7}}$\,mm.  In Punkt wird die \emph{Schriftgröße}
-(bzw. der \emph{Schriftgrad}) angegeben.  Zur Zeit des Bleisatzes war
+0,352$\overline{\text{7}}$\,mm.  In Punkt wird der \emph{Schriftgrad}
+(bzw. die \emph{Schriftgröße}) angegeben.  Zur Zeit des Bleisatzes war
 das die \emph{Kegelstärke} (bzw. \emph{Kegelhöhe}) der Lettern (siehe
 \cref{fig:Bleiletter}).  Im Foto- und besonders im Digitalsatz ist die
-Angabe von Schriftgrößen zwar weiter grob am historischen Vorbild
+Angabe von Schriftgraden zwar weiter grob am historischen Vorbild
 orientiert, aber verschiedene Schriften desselben Schriftgrades können
 optisch deutlich verschieden groß wirken.  Als (sehr) grobe Faustregel
 kann man sich merken, dass die Versalhöhe einer Schrift ca. 70--75\,\%
@@ -328,7 +328,7 @@ und die x-Höhe ca. 45--50\,\% des Schriftgrades beträgt.
   \label{fig:Bleiletter}
 \end{figure}
 
-Ist eine Schriftgröße festgelegt, so nennt man die entsprechende Länge
+Ist ein Schriftgrad festgelegt, so nennt man die entsprechende Länge
 ein \emph{Geviert}.  Historisch kommt dieser Name von quadratischen
 nicht druckenden Lettern (»Geviert« ist ein veraltetes Wort für
 »Quadrat«): ein Geviert war ein Letter, der so breit war wie die
@@ -343,11 +343,60 @@ typographischen Namen der verschiedenen Striche
   bzw. \Char{N} die entsprechende Breite haben.  Das ist aber falsch:
   Üblicherweise ist ein \Char{M} ein wenig schmaler als ein Geviert.}
 
-%% Zeilenabstand: eigentlich sollte™ man einfach den Abstand zwischen
-%% den Grundlinien messen.  Es gibt sinnvolle Standardeinstellungen,
-%% bspw. in LaTeX 10pt → 12pt, 11pt → 13.6pt, 12pt → 14.5pt.  MS Word
-%% und LibreOffice benutzen auch ca. 1,2-faches der Schriftgröße als
-%% Grundeinstellung, das heißt da aber »einzeilig«.
+Passend zu den Schriftlinien möchten wir hier noch über den
+\emph{Zeilenabstand} sprechen.  Dieser wird von Grundlinie zu
+Grundlinie gemessen; den Abstand von p-Linie einer Zeile zur k-Linie
+der darauffolgenden Zeile bezeichnet man als
+\emph{(Zeilen-)Durchschuss}.  Die meisten Textsatzprogramme (oder auch
+Textverarbeitungsprogramme) haben Standardeinstellungen für den
+Zeilenabstand: so benutzen bspw. Microsoft Word und LibreOffice Writer
+standardmäßig einen Zeilenabstand von ca. 120\,\% des Schriftgrades
+(bezeichnen das aber als »einzeiligen Zeilenabstand«).  In den
+Standard-\LaTeX-Dokumentklassen sind die Schriftgrade und zugehörigen
+Standard-Zeilenabstände wie in \cref{tab:LaTeX_font_sizes} angegeben.
+
+\begin{table}
+  \centering
+  \begin{tabular}{rrr}
+    \toprule
+    \tableHead{Klassenoption} & \tableHead{Schriftgrad} & \tableHead{Zeilenabstand}\\
+    \midrule
+    \texttt{10pt} & \tab{10,00}\,pt & \tab{12,0}\,pt \\
+    \texttt{11pt} & \tab{10,95}\,pt & \tab{13,6}\,pt \\
+    \texttt{12pt} & \tab{12,00}\,pt & \tab{14,5}\,pt \\
+    \bottomrule
+  \end{tabular}
+  \caption{Standard-Schriftgrade und -Zeilenabstände bei \LaTeX}
+  \label{tab:LaTeX_font_sizes}
+\end{table}
+
+Um ein harmonisches Bild zu erreichen, sollte man aber nicht nur auf
+die Standardeinstellungen vertrauen: unterschiedliche Schriften
+brauchen unterschiedliche Zeilenabstände!  Beispielsweise empfiehlt es
+sich, für die \emph{Palatino} den Standard-Zeilenabstand von \LaTeX\
+um den Faktor 1,05 hochzuskalieren (per \verb!\linespread{1.05}!), da
+die Zeilen sonst zu »gedrängt« wirken; zum Vergleich siehe
+\cref{fig:Palatino_Zeilenabstand}.
+
+\begin{figure}
+  \centering
+
+  \subfloat[Standardwert]
+  {\begin{minipage}[b]{.35\textwidth}
+      \fontfamily{pplj}\selectfont\smaller[.5]
+      \lipsum[1][1-3]\par
+    \end{minipage}}
+  \hspace{.1\textwidth}
+  \subfloat[Vergrößert]
+  {\begin{minipage}[b]{.35\textwidth}
+      \linespread{1.05}
+      \fontfamily{pplj}\selectfont\smaller[.5]
+      \lipsum[1][1-3]\par
+    \end{minipage}}
+
+  \caption{Anpassung des Zeilenabstands bei \emph{Palatino}}
+  \label{fig:Palatino_Zeilenabstand}
+\end{figure}
 
 \section{Spationierung und Unterschneidung}
 
