--- a/4-Seitenlayout.tex
+++ b/4-Seitenlayout.tex
@@ -156,7 +156,7 @@ dass dieser Wert zwischen 60 und 80 Zeichen pro Zeile liegt, da ansonsten die
 Lesbarkeit beeinträchtigt ist. Dieses Skript hat etwa 65 Zeichen pro Zeile. Je
 nach Textgattung (etwa bei signifikantem Formelanteil) ist aber auch ein
 größerer Wert geeignet. Wir weisen darauf hin, dass die Zeilenlänge von der
-Laufweite der Schriftart abhängt.\todo{Laufweite in §3 erwähnen.}
+Laufweite der Schriftart abhängt.
 
 Andererseits sollte natürlich auch noch ein relevanter Teil der Seite
 beschreibbar sein. So sorgt ein Rasterfaktor von 7 zwar für kurze Zeilen,
@@ -239,6 +239,7 @@ noch einmal schematisch visualisiert.
 \section{Umbrüche \emph{\&} Absätze}
 
 \subsection{Zeilenumbrüche und Blocksatz}
+\label{subsec:Blocksatz}
 
 Ist eine Zeile voll, muss in der nächsten Zeile weitergeschrieben werden; es ist
 also ein \emph{Zeilenumbruch} vonnöten. Umgebrochen werden kann am Ende eines
@@ -318,7 +319,7 @@ Vor allem im doppelseitigen Layout ist es wünschenswert, dass alle voll
 beschriebenen Seiten unten bündig enden, also bis zum unteren Ende des
 Satzspiegels gefüllt sind. Würden alle Seiten nur aus Text bestehen, wäre dies
 leicht zu bewerkstelligen, indem man darauf achtet, dass die Höhe des
-Satzspiegels ein Vielfaches des Zeilenabstands\todo{Zeilenabstand = Zeilenhöhe+Durchschuss} beträgt. In
+Satzspiegels ein Vielfaches des Zeilenabstands beträgt. In
 der Praxis finden sich aber auf vielen Seiten andere Elemente wie Überschriften
 oder Graphiken, sodass manche Seiten ein bisschen früher enden. Dem wird durch
 ein vertikales Analogon zum Blocksatz entgegengewirkt, das manche vertikalen
