--- a/4-Seitenlayout.tex
+++ b/4-Seitenlayout.tex
@@ -277,12 +277,11 @@ eingibt, sondern indem man eine Leerzeile im Quellcode (also zweimal
 \keys{\return} drücken) erzeugt. Dann kann \LaTeX\ nämlich das Gewünschte tun.
 
 Gewünscht sein können, je nach Tradition, zwei verschiedene Dinge, wobei man
-sich global für eines davon entscheiden sollte: Im europäischen Sprachraum ist
-\todo{Das Wort »Sprachraum« passt hier nicht.}
+sich global für eines davon entscheiden sollte: In europäischer Typographie ist
 es üblich, dass der neue Absatz ohne zusätzlichen vertikalen Zwischenraum in der
 nächsten Zeile beginnt, diese neue Zeile allerdings mit einem \emph{Einzug},
-also einem Leerraum, von etwa einem Geviert beginnt. Im amerikanischen
-Sprachraum, in der Webtypographie und zum Teil auch zunehmend in deutschen
+also einem Leerraum, von etwa einem Geviert beginnt. In \acr{US}-amerikanischer
+Typographie, in der Webtypographie und zum Teil auch zunehmend in deutschen
 Geschäftsbriefen ist es hingegen üblich, statt des Einzuges die beiden Absätze
 durch eine \emph{Leerzeile} zu trennen.
 
