--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -415,11 +415,11 @@ Schreibmaschinen üblich oder werden auf Computern in
 Terminalemulatoren oder in Reintext-Editoren verwendet.
 \texttt{Dicktengleicher Text sieht bspw. so aus.}
 
-Eine Vergrößerung der Glyphenabstände nennt man \emph{Sperren}
-(engl. \emph{\foreignlanguage{british}{letterspacing}}) oder auch
-\emph{Spationieren}, historisch \emph{Spatiieren}.  Beim Bleisatz
-wurden dafür \emph{Spatien}, kleine Abstandshalter, zwischen die
-Lettern gesetzt; digital braucht man die natürlich nicht.  Beim
+Eine gleichmäßige Vergrößerung der Glyphenabstände nennt man
+\emph{Sperren} (engl. \emph{\foreignlanguage{british}{letterspacing}})
+oder auch \emph{Spationieren}, historisch \emph{Spatiieren}.  Beim
+Bleisatz wurden dafür \emph{Spatien}, kleine Abstandshalter, zwischen
+die Lettern gesetzt; digital braucht man die natürlich nicht.  Beim
 Textsatz mit Antiqua-Schriften\footnote{Bei gebrochenen Schriften war
   Sperren eine übliche Form der Hervorhebung.} ist Sperren einerseits
 üblich zum Umsetzen von Blocksatz (siehe \cref{subsec:Blocksatz}), wo
