Remove sentence that is now in chapter 3.

--- a/2-Hervorhebungen.tex
+++ b/2-Hervorhebungen.tex
@@ -54,8 +54,7 @@ unterschiedliche Strichdicken im selben Wort.
 \marginnote{\texttt{\textbackslash textls}}Kapitälchen werden häufig
 \emph{gesperrt}, d.\,h. der Abstand zwischen den einzelnen Buchstaben wird
 künstlich vergrößert, zum Vergleich:
-\textls[50]{\textsc{kapitälchen}}. Kleinbuchstaben will man hingegen nicht
-\textls[50]{sperren}.
+\textls[50]{\textsc{kapitälchen}}.
 
 Kapitälchen können an verschiedenen Stellen zum Einsatz kommen, und je nach
 Anwendung bietet sich ein anderer Sperrfaktor an. In diesem Skript werden
