--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -442,7 +442,7 @@ anzupassen.  Das bezeichnet man als \emph{Unterschneidung}
 bspw. Glyphen mit Schrägen näher aneinandergerückt, siehe
 \cref{fig:Unterschneidung}.  Digitalschriften kommen mit
 \emph{Un\-ter\-schnei\-dungs-Tabellen}, die für sehr viele Situationen
-eine sinnvolle automatische Unerschneidung ermöglichen.  Muss man
+eine sinnvolle automatische Unterschneidung ermöglichen.  Muss man
 trotzdem einmal manuell nachhelfen (vgl. \cref{fig:xkcd_kerning}),
 geht das in \TeX\ mit dem Befehl \verb!\kern!.  So wird
 bspw. \verb!Ha\kern.75pt ll\kern-.5pt o! zu Ha\kern.75pt ll\kern-.5pt
