--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -1,6 +1,6 @@
 \chapter{Zeichensetzung}
 
-Dieses erste Kapitel beschäftigt sich streng genommen noch nicht mit
+Dieses erste Kapitel beschäf"|tigt sich streng genommen noch nicht mit
 Typographie, sondern lediglich mit der semantisch korrekten Verwendung von
 Sonderzeichen in deutschen und englischen Texten. Für diese Problematik genügt
 es also, einen Text als reine Kette von wohldefinierten Zeichen zu betrachten.
@@ -22,7 +22,7 @@ aus wie verkleinerte und ausgefüllte Versionen dieser Ziffern (ein Komma
 \Char{,} sieht wie eine 9 aus).\looseness-1
 
 Im Deutschen wird die Anführungszeichenkombination »99–66« benutzt, wobei die
-öffenen Anführungszeichen unten, die schließenden jedoch oben stehen, zum
+öffnenden Anführungszeichen unten, die schließenden jedoch oben stehen, zum
 Beispiel: „Hallo!“ Bei verschachtelten Anführungszeichen werden innen einfache
 Anführungszeichen, also »9–6«, benutzt: „Er sagte: ‚Hallo!{‘}, und ging fort.“
 Wir merken an, dass das einfache öffnende deutsche Anführungszeichen \Char{‚}
@@ -94,7 +94,7 @@ Ersatzzeichen \Char{\textquotesingle}, \emph{keine} Apostrophe!\looseness-1
 \label{sec:Striche}
 
 Es gibt verschiedene Arten von (horizontalen) \emph{Strichen}, die in Texten
-aller Art auftauchen.  Hier eine kleine Auswahl:
+aller Art auf"|tauchen.  Hier eine kleine Auswahl:
 \Char{-}\,\Char{--}\,\Char{---}\,\Char{$-$}\,\Char{$=$}.  Diese Striche haben
 verschiedene Aufgaben, die gerne verwechselt werden.  Typographisch
 unterscheiden wir die Striche nach ihrer Länge.
@@ -267,7 +267,7 @@ es durch \verb!\,! erzeugt werden. Es kommt u.\,a. zum Einsatz in
 \item Abkürzungen wie etwa d.\,h., z.\,B. oder i.\,d.\,R.,
 \item Datumsangaben wie etwa 28.\,12.\,2024,
 \item Abkürzungen mit Nummern wie etwa §\,3, Thm.\,4.7,
-\item Zahlen mit Einheitenzeichen wie etwa 87\,km oder 37\,\%,
+\item Zahlen mit Einheitenzeichen wie etwa 87\,km oder 37\,\% und
 \item großen Zahlen wie 12\,345.
 \end{itemize}
 
