--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -3,13 +3,13 @@
 
 Das grundlegende Arbeitsmittel der Typographie ist natürlich die
 \emph{Schrift}.  Mit ihr wollen wir uns in diesem Kapitel umfassend
-beschäftigen.  Einige Aspekte haben wir schon gesehen; hier gehen wir
+beschäf"|tigen.  Einige Aspekte haben wir schon gesehen; hier gehen wir
 aber weiter ins Detail.  Da sich die Gestaltung von Schrift »im
 Kleinen« abspielt (im Gegensatz zur Gestaltung von bspw. ganzen
 Seiten), wird das entsprechende Teilgebiet der Typographie auch als
 \emph{Mikrotypographie} bezeichnet.
 
-\section{Begriffliches und Klassifikation}
+\section{Begriff"|liches und Klassifikation}
 
 Eine \emph{Glyphe} ist die konkrete graphische Realisierung eines
 (abstrakten) Schriftzeichens.  So sind bspw. \Char{a},
@@ -34,7 +34,7 @@ nennt man dann auch eine \emph{Schriftfamilie}.\footnote{Das ist das
   einen Schnitt gibt, die also keine Familie ist.}
 
 Schriftarten werden nach Aspekten ihrer Gestaltung klassifiziert.  Wir
-beschäftigen uns hier nur mit \emph{Satzschriften} (also keine
+beschäf"|tigen uns hier nur mit \emph{Satzschriften} (also keine
 Handschriften) für das lateinische Alphabet.  Diese werden
 grundsätzlich unterschieden in zwei \emph{Schriftgattungen}, nämlich
 \emph{Antiqua-Schriften}\footnote{Auch für das griechische, armenische
@@ -144,7 +144,7 @@ wird, wird historisierend die jeweilige \emph{Brotschrift} genannt~--
 mit ihr haben Schriftsetzer früher »ihr täglich Brot« verdient.
 Angeblich™ lesen sich im Fließtext Schriften mit Serifen leichter als
 Grotesken.  Es gibt dazu auch einige Untersuchungen; soweit ich
-(Philip) weiß, sind die aber zu keinen aussagekräftigen (sprich
+(Philip) weiß, sind die aber zu keinen aussagekräf"|tigen (sprich
 statistisch signifikanten) Ergebnissen gekommen.  (Tatsächlich sind
 serifenlose Schriften wohl teilweise hilfreich bei Legasthenie.)  Auf
 jeden Fall sind Grotesken eine jüngere Erfindung (sie sind Anfang des
@@ -346,7 +346,7 @@ typographischen Namen der verschiedenen Striche
 Passend zu den Schriftlinien möchten wir hier noch über den
 \emph{Zeilenabstand} sprechen.  Dieser wird von Grundlinie zu
 Grundlinie gemessen; den Abstand von p-Linie einer Zeile zur k-Linie
-der darauffolgenden Zeile bezeichnet man als
+der darauf"|folgenden Zeile bezeichnet man als
 \emph{(Zeilen-)Durchschuss}.  Die meisten Textsatzprogramme (oder auch
 Textverarbeitungsprogramme) haben Standardeinstellungen für den
 Zeilenabstand: so benutzen bspw. Microsoft Word und LibreOffice Writer
@@ -598,7 +598,7 @@ mikrotypographische Feinheiten an\footnote{Bspw. verwendet es
 
 Abschließend geben wir ein paar Blindtext-Beispiele in verschiedenen
 Schriftfamilien.  Alle sind mit der \LaTeX-Option \verb!11pt! gesetzt,
-also in Schriftgröße 10,95\,pt.
+also in Schriftgrad 10,95\,pt.
 
 \newcommand*{\testText}{0123456789 \lipsum[1][1]
   \textit{\lipsum[1][2]} \textbf{\lipsum[1][3]}
@@ -614,7 +614,7 @@ also in Schriftgröße 10,95\,pt.
 
 \subsection{Minion}
 
-\testText
+{\testText}
 
 \subsection{Times}
 
