--- a/4-Seitenlayout.tex
+++ b/4-Seitenlayout.tex
@@ -246,7 +246,7 @@ also ein \emph{Zeilenumbruch} vonnöten. Umgebrochen werden kann am Ende eines
 Wortes oder auch innerhalb eines Wortes zwischen zwei Silben; dann ist ein
 Trennstrich (siehe \cref{subsec:Viertel}) vonnöten. Auf diese Weise passiert es
 aber, dass Zeilen je nachdem, welchen Text sie enthalten, etwas zu kurz
-sind. Beim im Buchsatz üblichen \emph{Blocksatz} werden daraufhin die
+sind. Beim im Buchsatz üblichen \emph{Blocksatz} werden darauf"|hin die
 Leerzeichen (und ein kleines bisschen auch die Buchstabenzwischenräume)
 gestreckt, sodass alle Zeilen bündig am rechten Ende des Satzspiegels enden. In
 geringem Maße ist auch das Gegenteil möglich: Nämlich dass bei einer minimal zu
