Ein bisschen Layout.

--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -416,6 +416,8 @@ oder Reintext-Editoren verwendet.  \texttt{Dicktengleicher Text sieht
   bspw. so aus.}  Eine Schrift mit variabler Dickte heißt
 \emph{Proportionalschrift}.
 
+\enlargethispage{\baselineskip}
+
 Eine gleichmäßige Vergrößerung der Glyphenabstände nennt man
 \emph{Sperren} (engl. \emph{\foreignlanguage{british}{letterspacing}})
 oder auch \emph{Spationieren}, historisch \emph{Spatiieren}.  Beim
@@ -492,16 +494,16 @@ Buchstabenkombinationen \Char{ff}, \Char{fi}, \Char{fl}, \Char{ffi},
 \begin{figure}
   \centering
 
-  \begin{minipage}{.15\textwidth}
-    \centering\Large
+  \begin{minipage}{.2\textwidth}
+    \centering\huge
     f"|f → ff\\
     f"|i → fi\\
     f"|j → fj\\
     f"|l → fl
   \end{minipage}
   \hspace{.1\textwidth}
-  \begin{minipage}{.15\textwidth}
-    \centering\Large
+  \begin{minipage}{.2\textwidth}
+    \centering\huge
     f"|t → ft\\
     f"|f"|i → ffi\\
     \emph{f"|f} → \emph{ff}
@@ -515,6 +517,8 @@ An \emph{Wortfugen} werden keine Ligaturen gesetzt; so schreibt man
 bspw. \emph{Kaffee}, aber \emph{auf"|fangen}.  In \LaTeX\ mit dem
 \texttt{babel}-Paket wird das über den \emph{Ligaturbrecher} \verb!"|!
 erreicht.
+
+\enlargethispage{\baselineskip}
 
 \newcommand*{\longS}{\includegraphics{long_s}\kern-.5pt}
 
