--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -190,7 +190,7 @@ Schrift: stärkere Glyphen wirken dunkler.
 Die \emph{Schriftlage} gibt an, ob die Glyphen »aufrecht« stehen oder
 »geneigt« sind; üblicherweise wird unterschieden zwischen
 \emph{normal} (engl. \emph{\foreignlanguage{british}{roman}}) und
-\emph{kursiv} engl. \emph{\foreignlanguage{british}{italic}}.
+\emph{kursiv} (engl. \emph{\foreignlanguage{british}{italic}}).
 Historisch geht kursive Schrift auf Schreibschriften (»Kursive«)
 zurück, konkret auf die \emph{humanistische Kursive} von \name{Niccolò
   de' Niccoli} (1364--1437).  Daher ändert sich von normaler zu
@@ -345,8 +345,8 @@ typographischen Namen der verschiedenen Striche
 
 Passend zu den Schriftlinien möchten wir hier noch über den
 \emph{Zeilenabstand} sprechen.  Dieser wird von Grundlinie zu
-Grundlinie gemessen; den Abstand von p-Linie einer Zeile zur k-Linie
-der darauf"|folgenden Zeile bezeichnet man als
+Grundlinie gemessen; den Abstand von der p-Linie einer Zeile zur
+k-Linie der darauf"|folgenden Zeile bezeichnet man als
 \emph{(Zeilen-)Durchschuss}.  Die meisten Textsatzprogramme (oder auch
 Textverarbeitungsprogramme) haben Standardeinstellungen für den
 Zeilenabstand: so benutzen bspw. Microsoft Word und LibreOffice Writer
@@ -573,7 +573,7 @@ niedrige Sonderzeichen, bspw. Trennstriche, sowie entsprechende Teile
 von Buchstaben (wie Serifen) minimal verschoben, sodass sie \emph{über
   den Rand hinaus} ragen.  Dadurch ergibt sich ein gleichmäßiger
 wirkender Rand als wenn die Glyphen tatsächlich am Rand enden (siehe
-\cref{fig:Randausgleich}).  Für pdf\LaTeX, \LuaTeX\ und \XeTeX\ bietet
+\cref{fig:Randausgleich}).  Für pdf\TeX, \LuaTeX\ und \XeTeX\ bietet
 das Paket \texttt{microtype} Randausgleich sowie einige weitere
 mikrotypographische Feinheiten an\footnote{Bspw. verwendet es
   \emph{\foreignlanguage{british}{character expansion}}, um Blocksatz
