--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -317,7 +317,7 @@ das die \emph{Kegelstärke} (bzw. \emph{Kegelhöhe}) der Lettern (siehe
 \cref{fig:Bleiletter}).  Im Foto- und besonders im Digitalsatz ist die
 Angabe von Schriftgraden zwar weiter grob am historischen Vorbild
 orientiert, aber verschiedene Schriften desselben Schriftgrades können
-optisch deutlich verschieden groß wirken.  Als (sehr) grobe Faustregel
+deutlich verschieden große Glyphen haben.  Als (sehr) grobe Faustregel
 kann man sich merken, dass die Versalhöhe einer Schrift ca. 70--75\,\%
 und die x-Höhe ca. 45--50\,\% des Schriftgrades beträgt.
 
