--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -1,11 +1,12 @@
 \chapter{Zeichensetzung}
 
-Dieses erste Kapitel beschäf"|tigt sich streng genommen noch nicht mit
-Typographie, sondern lediglich mit der semantisch korrekten Verwendung von
-Sonderzeichen in deutschen und englischen Texten. Für diese Problematik genügt
-es also, einen Text als reine Kette von wohldefinierten Zeichen zu betrachten.
-Durch den Unicode-Standard ist jedes dieser Zeichen durch einen
-eindeutigen, üblicherweise hexadezimal angegebenen \emph{Codepoint} (z.\,B. \codepoint{0061} für »a«) festgelegt.
+Dieses erste Kapitel beschäf"|tigt sich streng genommen noch nicht mit Typographie,
+sondern lediglich mit der semantisch korrekten Verwendung von Sonderzeichen in
+deutschen und englischen Texten. Für diese Problematik genügt es, einen gegebenen Text als
+reine Kette von wohldefinierten Zeichen zu betrachten.  Durch den
+Unicode-Standard ist jedes dieser Zeichen durch einen eindeutigen,
+üblicherweise hexadezimal angegebenen \emph{Codepoint} (z.\,B. \codepoint{0061}
+für »a«) festgelegt.
 
 Die korrekte Verwendung grundlegender Satzzeichen (Punkt, Komma und Semikolon sowie
 Frage- und Ausrufezeichen) setzen wir als bekannt voraus. Bei einigen
@@ -25,9 +26,9 @@ Im Deutschen wird die Anführungszeichenkombination »99–66« benutzt, wobei d
 öffnenden Anführungszeichen unten, die schließenden jedoch oben stehen, zum
 Beispiel: „Hallo!“ Bei verschachtelten Anführungszeichen werden innen einfache
 Anführungszeichen, also »9–6«, benutzt: „Er sagte: ‚Hallo!{‘}, und ging fort.“
-Wir merken an, dass das einfache öffnende deutsche Anführungszeichen \Char{‚}
-(\codepoint{201a}) einen anderen Unicode-Codepoint als das Komma \Char{,}
-(\codepoint{002c}) besitzt.\looseness-1
+Das einfache öffnende deutsche Anführungszeichen \Char{‚}
+(\codepoint{201a}) besitzt einen anderen Unicode-Codepoint als das Komma \Char{,}
+(\codepoint{002c}).\looseness-1
 
 Im Englischen wird (wenigstens im Britischen) die Kombination »6–9«,
 beide oben, verwendet, zum Beispiel: \foreignlanguage{british}{‘Hi!’}
