--- a/2-Hervorhebungen.tex
+++ b/2-Hervorhebungen.tex
@@ -53,7 +53,7 @@ unterschiedliche Strichdicken im selben Wort.
 
 \marginnote{\texttt{\textbackslash textls}}Kapitälchen werden häufig
 \emph{gesperrt}, d.\,h. der Abstand zwischen den einzelnen Buchstaben wird
-künstlich vergrößert, zum Vergleich:
+künstlich vergrößert (Details finden sich in \cref{sec:sperren}). Zum Vergleich:
 \textls[50]{\textsc{kapitälchen}}.
 
 Kapitälchen können an verschiedenen Stellen zum Einsatz kommen, und je nach
